tests/sksl/errors/OverflowIntLiteral.dsl.glsl
### Compilation failed:

error: integer is out of range for type 'int': 2147483648

error: integer is out of range for type 'ushort4': -1
error: integer is out of range for type 'ushort4': 65536

error: integer is out of range for type 'short4': -32769
error: integer is out of range for type 'short4': 32768

error: integer is out of range for type 'int4': 2147483648

error: integer is out of range for type 'uint4': -2147483648

5 errors
